# datasette-as-website

./: README.md  build.py  build.sh  deploy.sh  metadata.json  metadata.yaml  posts.csv  pyproject.toml  run.sh
posts/: Automating Deployments to Netlify with Github Actions.md  Basic CloudFormation Templates.md  Basic Web3 Scripting in Python.md  Building with Mkdocs.md  Design Resources.md  Flattening JSON.md  Getting Started with Obsidian.md  How to use structlog with fastapi and fly.io.md  IAM Identity Center Tips.md  Obsidian Git.md  Pythons LRU Cache.md  Running Multiple Services in a Single Python Repository.md  TODO.md  Toolbox.md  Viewing Blockchain Transactions with Alfred.md  index.md  post1.md  post2.md
static-files/: theme.css
templates/: index.html  row.html
